# trac_ik_standalone

./: .gitignore  API_USAGE_EXAMPLES.md  BUILD_STANDALONE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  FIX_COMPILE_ERROR.md  MODIFICATION_SUMMARY_FINAL.md  QUICK_START.md  README.md  TRAC_IK_FEATURES.md
examples/: CMakeLists.txt  README.md  basic_ik_example.cpp  get_multiple_solutions_example.cpp
trac_ik_lib/: CMakeLists.txt
trac_ik_lib/include/trac_ik/: dual_quaternion.h  kdl_tl.hpp  math3d.h  nlopt_ik.hpp  rclcpp_logger_stub.hpp  trac_ik.hpp
trac_ik_lib/src/: kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
